Fixed img display on homepage when on mobile device

--- a/src/styles.css
+++ b/src/styles.css
@@ -177,7 +177,7 @@ img {
     margin-top: 5px;
     max-width: 200px;
   }
-  .homepage .img-fluid {
+  .homepage {
     display: none;
   }
   .card-title {
